# fabric-color-dataset

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE-CODE  LICENSE-DATA  README.md  STABILITY.md
.github/scripts/: format_run_summary.py
.github/workflows/: monthly-update.yml  weekly-update.yml
configs/art-gallery-fabrics/: pure-solids.yaml
configs/riley-blake-designs/: confetti-cottons.yaml
configs/robert-kaufman/: kona-cotton.yaml
data/: index.json
data/art-gallery-fabrics/: pure-solids.changelog.md  pure-solids.json
data/riley-blake-designs/: confetti-cottons.changelog.md  confetti-cottons.json
data/robert-kaufman/: kona-cotton.changelog.md  kona-cotton.json
docs/: decisions.md  project-plan.md  vision-prompt.md
pipeline/: pyproject.toml
pipeline/prompts/: hex_extraction_v1.md
pipeline/src/: cli.py  config.py  discover.py  extract.py  extract_algorithmic.py  fetch.py  image_utils.py  merge.py  models.py  parse.py  validate.py  vision.py  write.py
pipeline/src/scrapers/: __init__.py  art_gallery_fabrics.py  riley_blake_designs.py  robert_kaufman.py
pipeline/tests/: test_cli_summary.py  test_extract.py  test_extract_classifier.py  test_fetch.py  test_image_utils.py  test_merge.py  test_scrapers_art_gallery_fabrics.py  test_scrapers_riley_blake_designs.py  test_scrapers_robert_kaufman.py  test_validate.py  test_vision.py  test_write_index.py
raw/art-gallery-fabrics/pure-solids/html/: PE-428.html  PE-456.html  PE-470.html  PE-491.html  PE-507.html  PE-525.html  PE559.html  PES919.html
schemas/: README.md  index_v1.json  v1.json
(+375 files in other folders)
